# flask-skeleton

./: .env.dev  .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  app.py  app_test.py  db_repl.py  db_seed.py  index.html  pyproject.toml  requirements.txt
