[tool.poetry]
name = "skeleton"
version = "0.1.0"
description = ""
authors = ["zachvalenta <zjv5002@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
flask = "^1.1.1"
python-dotenv = "^0.10.3"
flask-sqlalchemy = "^2.4.1"
marshmallow-sqlalchemy = "^0.21.0"
flask-marshmallow = "^0.10.1"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
httpie = "^1.0.3"
coverage = "^5.0.2"
pytest = "^5.3.2"
flake8 = "^3.7.9"
isort = "^4.3.21"
litecli = "^1.2.0"
bpython = "^0.18"
visidata = "^1.5.2"
pre-commit = "^2.0.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
